--- a/game.html
+++ b/game.html
@@ -9,6 +9,8 @@
         <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/addons/p5.sound.js" integrity="sha512-TU9AWtV5uUZPX8dbBAH8NQF1tSdigPRRT82vllAQ1Ke28puiqLA6ZVKxtUGlgrH6yWFnkKy+sE6luNEGH9ar0A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>    </head>
     <body class="startPage">
+        <button onclick="game.peterLaugh.play()">Play Sound</button>
+
         <section>
         <script src="./js/obstacles.js"></script>
         <script src="./js/player.js"></script>
