--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <div class="top">Shut Up, MEG!</div>
             <div class="bottom" aria-hidden="true">Shut Up, MEG!</div>
           </section>
-        <a href="index.html"><button class="glow-on-hover" type="button">Let's Start!</button></a>
+        <a href="game.html"><button class="glow-on-hover" type="button">Let's Start!</button></a>
 
      <div class="container">
         <img src="assets/family-guy.jpeg" alt="Family Guy" class="centeredImage">
