--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <a href="game.html"><button class="glow-on-hover" type="button">Let's Start!</button></a>
 
      <div class="container">
+        <a href="instructions.html"><button class="go-to-instructions" type="button">Instructions</button></a>
         <img src="assets/family-guy.jpeg" alt="Family Guy" class="centeredImage">
         <audio class="audioTheme" controls autoplay muted>
             <source src="assets/family-guy-intro.mp3" type="audio/mpeg">
