Added to the instructions.html

--- a/instructions.html
+++ b/instructions.html
@@ -16,6 +16,9 @@
                 He begins with three lives, which means, more opportunities for him to win.<br />
                 If he manages to dodge all Megs by the end of the countdown, he wins.<br />
                 However, once he has hit three Megs, he loses.<br />
+                <br />
+                Watch out carefully:<br />
+                The more time passes, the faster it gets!
                 <div class="bothButtons">
                 <a href="index.html"><button class="back-to-menu-button" type="button">Back To Menu</button></a>
                 <a href="game.html"><button class="start-from-menu" type="button">Let's Start!</button></a>
