--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             >
             and is
             <a
-              href="https://radiant-piroshki-6694a9.netlify.app"
+              href="https://my-family-guy-game.netlify.app/"
               target="_blank"
               rel="noopener noreferrer"
               >hosted on Netlify</a>
