--- a/instructions.html
+++ b/instructions.html
@@ -15,7 +15,7 @@
                 In order for him to achieve the desired wish, he must move fast enough within a time-range of 60 seconds.<br />
                 He begins with three lives, which means, more opportunities for him to win.<br />
                 If he manages to dodge all Megs by the end of the countdown, he wins.<br />
-                However, once he has hit three Megs, he loses.<br />
+                However, once he hits three Megs, he loses.<br />
                 <br />
                 Watch out carefully:<br />
                 The more time passes, the faster it gets!
