--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
         </ul>
     
         <footer class="codedBy">
-            Coded by Diana (Dee) Kalstein ©️     <span><img src="assets/dianacartoon.png" alt="Dee" class="dee" width=70>
-            </span>, is
+            Coded by Diana (Dee) Kalstein ©️ <span><img src="assets/dianacartoon.png" alt="Dee" class="dee" width=60></span>, is
             <a
               href="https://github.com/Deezledee/Family-Guy-Project.git"
               target="_blank"
