--- a/instructions.html
+++ b/instructions.html
@@ -14,7 +14,7 @@
                 Our player, Peter Griffin, despises his daughter, Meg, so bad that he would like to dodge her at all costs!<br />
                 In order for him to achieve the desired wish, he must move fast enough within a time-range of 60 seconds.<br />
                 He begins with three lives, which means, more opportunities for him to win.<br />
-                If he manages to dodge all Megs by the end of the countdown, he wins.<br />
+                If he manages to avoid all Megs by the end of the countdown, he wins.<br />
                 However, once he hits three Megs, he loses.<br />
                 <br />
                 Watch out carefully:<br />
