Added Copyright Credits

--- a/index.html
+++ b/index.html
@@ -45,5 +45,9 @@
               rel="noopener noreferrer"
               >hosted on Netlify</a>
         </footer>
+        <div class="credits">
+          Disclaimer: This game was created solely for learning and entertainment purposes and is neither affiliated with the FOX animated sitcom,"Family guy",
+          <br /> nor is it used for profitable causes. All images and sounds implemented in the game belong to their respective owners.
+        </div>
     </body>
 </html>
