--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               >hosted on Netlify</a>
         </footer>
         <div class="credits">
-          Disclaimer: This game was created solely for educational purposes and is neither affiliated with the FOX animated sitcom,"Family guy",
+          Disclaimer: This game was created solely for educational purposes and is neither affiliated with the FOX animated sitcom,"Family Guy",
           <br /> nor is it used for profitable causes. All images and sounds implemented in the game belong to their respective owners.
         </div>
     </body>
