--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="./styles.css" />
-     <title>Shut Up Meg Menu</title>
+     <title>Shut Up Meg</title>
     </head>
     <body class="menuPage">
         <section class="wrapper">
