--- a/index.html
+++ b/index.html
@@ -1,53 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="./styles.css" />
-     <title>Shut Up Meg</title>
-    </head>
-    <body class="menuPage">
-        <section class="wrapper">
-            <div class="top">Shut Up, MEG!</div>
-            <div class="bottom" aria-hidden="true">Shut Up, MEG!</div>
-          </section>
-        <a href="game.html"><button class="glow-on-hover" type="button">Let's Start!</button></a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
+    <title>Shut Up Meg</title>
+  </head>
+  <body class="menuPage">
+    <section class="wrapper">
+      <div class="top">Shut Up, MEG!</div>
+      <div class="bottom" aria-hidden="true">Shut Up, MEG!</div>
+    </section>
+    <a href="game.html"
+      ><button class="glow-on-hover" type="button">Let's Start!</button></a
+    >
 
-     <div class="container">
-        <a href="instructions.html"><button class="go-to-instructions" type="button">Instructions</button></a>
-        <img src="assets/family-guy.jpeg" alt="Family Guy" class="centeredImage">
-        <audio class="audioTheme" controls autoplay muted>
-            <source src="assets/family-guy-intro.mp3" type="audio/mpeg">
-          </audio>
-        </div>
-        <div class="contact">Contact me 📮 via:</div>
-            <ul>
-            <li class="email-link"><a href="mailto:dianakalstein@gmail.com" target="_blank"><img src="assets/gmail-icon.png" class="gmail-icon img-fluid" /></a></li>
-            <li class="facebook-link"><a href="https://facebook.com/TenaciousDiana" target="_blank"><img src="assets/facebook-icon.png" class="facebook-icon img-fluid" /></a></li>
-            <li class="instagram-link"><a href="https://www.instagram.com/deezledee" target="_blank"><img src="assets/instagram-icon.png" class="instagram-icon img-fluid" /></a></li>
-            <li class="github-link"><a href="https://github.com/Deezledee/" target="_blank"><img src="assets/github-icon.png" class="github-icon img-fluid" /></a></li>
-            <li class="linkedin-link"><a href="https://www.linkedin.com/in/diana-kalstein/" target="_blank"><img src="assets/linkedin-icon.png" class="linkedin-icon img-fluid" /></a></li>
+    <div class="container">
+      <a href="instructions.html"
+        ><button class="go-to-instructions" type="button">
+          Instructions
+        </button></a
+      >
+      <img
+        src="assets/family-guy.jpeg"
+        alt="Family Guy"
+        class="centeredImage"
+      />
+      <audio class="audioTheme" controls autoplay muted>
+        <source src="assets/family-guy-intro.mp3" type="audio/mpeg" />
+      </audio>
+    </div>
+    <div class="contact">Contact me 📮 via:</div>
+    <ul>
+      <li class="email-link">
+        <a href="mailto:dianakalstein@gmail.com" target="_blank"
+          ><img src="assets/gmail-icon.png" class="gmail-icon img-fluid"
+        /></a>
+      </li>
+      <li class="facebook-link">
+        <a href="https://facebook.com/TenaciousDiana" target="_blank"
+          ><img src="assets/facebook-icon.png" class="facebook-icon img-fluid"
+        /></a>
+      </li>
+      <li class="instagram-link">
+        <a href="https://www.instagram.com/deezledee" target="_blank"
+          ><img
+            src="assets/instagram-icon.png"
+            class="instagram-icon img-fluid"
+        /></a>
+      </li>
+      <li class="github-link">
+        <a href="https://github.com/Deezledee/" target="_blank"
+          ><img src="assets/github-icon.png" class="github-icon img-fluid"
+        /></a>
+      </li>
+      <li class="linkedin-link">
+        <a href="https://www.linkedin.com/in/diana-kalstein/" target="_blank"
+          ><img src="assets/linkedin-icon.png" class="linkedin-icon img-fluid"
+        /></a>
+      </li>
+    </ul>
 
-        </ul>
-    
-        <footer class="codedBy">
-            Coded by Diana (Dee) Kalstein ©️ <span><img src="assets/dianacartoon.png" alt="Dee" class="dee" width=60></span>, is
-            <a
-              href="https://github.com/Deezledee/Family-Guy-Project.git"
-              target="_blank"
-              rel="noopener noreferrer"
-              >open-sourced on GitHub</a
-            >
-            and is
-            <a
-              href="https://my-family-guy-game.netlify.app/"
-              target="_blank"
-              rel="noopener noreferrer"
-              >hosted on Netlify</a>
-        </footer>
-        <div class="credits">
-          Disclaimer: This game was created solely for educational purposes and is neither affiliated with the FOX animated sitcom,"Family Guy",
-          <br /> nor is it used for profitable causes. All images and sounds implemented in the game belong to their respective owners.
-        </div>
-    </body>
+    <footer class="codedBy">
+      Coded by Diana (Dee) Kalstein ©️
+      <span
+        ><img
+          src="assets/dianacartoon.png"
+          alt="Dee"
+          class="dee"
+          width="60" /></span
+      >, is
+      <a
+        href="https://github.com/Deezledee/Family-Guy-Project.git"
+        target="_blank"
+        rel="noopener noreferrer"
+        >open-sourced on GitHub</a
+      >
+      and is
+      <a
+        href="https://my-family-guy-game.netlify.app/"
+        target="_blank"
+        rel="noopener noreferrer"
+        >hosted on Netlify</a
+      >
+    </footer>
+    <div class="credits">
+      Disclaimer: This game was created solely for educational purposes and is
+      neither affiliated with the FOX animated sitcom,"Family Guy",
+      <br />
+      nor is it used for profitable causes. All images and sounds implemented in
+      the game belong to their respective owners.
+    </div>
+  </body>
 </html>
