Added more to the instructions

--- a/instructions.html
+++ b/instructions.html
@@ -16,6 +16,8 @@
                 He begins with three lives, which means, more opportunities for him to win.<br />
                 If he manages to avoid all Megs by the end of the countdown, he wins.<br />
                 However, once he hits three Megs, he loses.<br />
+                Make sure to open the game on Chrome and press "p" on your keyboard once it starts.<br />
+
                 <br />
                 Watch out carefully:<br />
                 The more time passes, the faster it gets!
